# OcrYoloEngine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MEMORY.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  smoke.yml
configs/: models.yaml  models.yaml.example  templates.yaml  templates.yaml.example
docker/: .dockerignore  Dockerfile.cpu  Dockerfile.gpu
docs/: DEVELOPMENT.md  README.md  bug修复日志.md  使用文档.md  开发说明.md  快速开始.md  手动测试验证流程.md  接口集成指南.md  设计与决策.md  部署文档.md  项目说明.md
docs/adr/: 0001-record-architecture-decisions.md  0002-template-matching-scoring.md  README.md  template.md
docs/guide/: beginner-guide.md  deployment.md  overview.md  quickstart.md  usage.md
docs/plans/: 2026-06-03-recognition-service.md
docs/specs/: 2026-06-03-recognition-service-design.md
models_store/: .gitkeep
plan/: 2026-06-10-bug修复日志.md  2026-06-10-yolo训练教程.md  2026-06-10-代码校验修复计划.md  2026-06-10-运维增强批次.md  2026-06-18-工程收口修复计划.md  2026-06-18-接口边界修复计划.md
scripts/: check.sh  gen_expected.py  sync_agent_docs.py
skills/agent-rules-single-source/: SKILL.md
src/ocr_yolo_engine/: __init__.py  cache.py  cli.py  config_loader.py  errors.py  merge.py  pipeline_runner.py  schemas.py  settings.py
tests/: conftest.py
tests/contract/: __init__.py  test_api_contract.py
tests/fakes/: __init__.py  recognizers.py
tests/fixtures/: README.md  __init__.py  factory.py  game_menu.expected.json  (+2 more)
training/: README.md  dataset.md  make_demo_dataset.py  train.py
(+58 files in other folders)
