[project]
name = "ocr-yolo-engine"
version = "0.1.0"
description = "面向自动化测试的视觉识别服务:OCR + YOLO + 模板匹配,只做推理返回坐标"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "vincent" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.7", "paddlepaddle>=2.6"]
yolo = ["ultralytics>=8.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27", "ruff>=0.4", "mypy>=1.10", "pre-commit>=3.7", "types-PyYAML"]

[project.scripts]
ocr-yolo = "ocr_yolo_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_yolo_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
packages = ["ocr_yolo_engine"]
mypy_path = "src"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: 需要加载真实模型的端到端冒烟测试(默认不在 CI 跑)",
]
addopts = "-m 'not smoke'"
pythonpath = ["src"]
